# models/categoryModel.js
@@ -1,0 +1,9 @@
+const mongoose = require("mongoose");
+
+const categorySchema = new mongoose.Schema({
+    name: { type: String, required: true },
+    description: { type: String }
+});
+
+module.exports = mongoose.model("category", categorySchema);
+
