# models/productModel.js
@@ -4,7 +4,7 @@ const productSchema = new mongoose.Schema({
    name: { type: String, required: true },
    description: { type: String },
    price: { type: Number, required: true },
-   category: { type: String, required: true },
+   category: { type: mongoose.Schema.Types.ObjectId, ref: "category", required: true },  // Reference Category
    stock: { type: Number, default: 0 }
 });
 
